<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/notifications_setting" />

        <Switch
            android:id="@+id/switch_repeating_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:defaultValue="false"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/daily_notification" />

        <Switch
            android:id="@+id/switch_release_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/release_notification" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>