<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_movie"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                app:layout_constraintStart_toStartOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/img_photo" />

            <TextView
                android:id="@+id/txt_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/releaseDate"
                android:textAlignment="center"
                android:textColor="#F44336"
                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                app:layout_constraintStart_toStartOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/description"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/txt_release_date"
                app:layout_constraintStart_toStartOf="@+id/txt_release_date"
                app:layout_constraintTop_toBottomOf="@+id/txt_release_date" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>